Fixing spacing...

--- a/main.css
+++ b/main.css
@@ -49,15 +49,17 @@ h1, p {
     background-image: url("banner.png");
     min-height: 316px;
     background-repeat: round;
+    padding: 0px;
   }
 
   .header h1 {
-    margin-top: 225px;
+    margin-top: 253px;
     margin-left: 236px;
     margin-bottom: 0px;
     padding-bottom: 0px;
-
-
+    font-size: 2.5em;
+    font-weight: normal;
+    padding: 0px;
   }
   
   .header, .footer {
